# graph-ed

./: Cargo.toml  README.md
migrations/2018-05-20-145512_create_users/: up.sql
migrations/2018-05-20-150052_create_node/: up.sql
migrations/2018-05-20-150248_create_tree/: down.sql  up.sql
scripts/: re-migrate
src/: .main.rs.rustfmt  context.rs  graph.rs  lib.rs  main.rs  models.rs  schema.rs
