[package]
name = "graph-ed"
version = "0.1.0"
authors = ["Eric Rochester <eric.rochester@willowtreeapps.com>"]

[dependencies]
chrono = { version = "0.4.2", features = ["serde"] }
diesel = { version = "1.2.2", features = ["postgres", "chrono"] }
dotenv = "0.12.0"
juniper = "0.9.2"
juniper_codegen = "0.9.2"
juniper_rocket = "0.1.2"
rocket = "0.3.10"
rocket_codegen = "0.3.10"
serde = "1.0.57"
serde_derive = "1.0.57"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
url = "1.7.0"
uuid = { version = "0.6.3", features = ["v4", "v5"] }

[dev-dependencies]
spectral = "0.6.0"
